bk_ida/gccida/g2/move_block_to_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_block_to_reg/src/expr.c:2276:55: error: must use 'enum' tag to refer to type 'machine_mode'
void  move_block_to_reg( int regno, rtx x, int nregs, machine_mode mode) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_block_to_reg/src/expr.c:2289:30: error: invalid suffix 'orce' on integer constant
v8 = operand_sub*(short *)0xforce( x, v7, mode); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_block_to_reg/src/expr.c:2289:6: error: use of undeclared identifier 'operand_sub'
v8 = operand_sub*(short *)0xforce( x, v7, mode); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_block_to_reg/src/expr.c:2292:31: error: invalid suffix 'xmode' on integer constant
v11 = gen_rtx_REG( *(short *)0xmode, v9); 
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_block_to_reg/src/obj/expr.o] Error 1
